# test

src/: my_robot_calibration.yaml  rosserial-melodic-devel.zip:Zone.Identifier  rosserial-noetic-devel.zip:Zone.Identifier  trajectory_executor.cpp
src/New folder/: emergency_handle.py  spraygun_handler.py
src/ai_module/: CMakeLists.txt  package.xml  sdk_launcher.sh  sdk_launcher_camera_connection.sh  sdk_launcher_segmentation.sh
src/ai_module/msg/: SampleMsg.msg
src/ai_module/scripts/: ai_flow.py  front_view_new_backup.py  sample_fun.py  sample_fun_call.py  start_image_processing_server.py  start_image_processing_server_backup.py
src/ai_module/srv/: ImageProc.srv
src/arm_ctrl_navigate/: CMakeLists.txt  package.xml
src/arm_ctrl_navigate/launch/: arm_ctrl_navigate.launch
src/arm_ctrl_navigate/msg/: AllListEachPoint.msg  ArmSettings.msg  JointPath.msg  ListEachPoint.msg  (+3 more)
src/arm_tf_publisher/: CMakeLists.txt  package.xml
src/axalta_mir250_robot_ur10e/: CMakeLists.txt  package.xml
src/axalta_mir250_robot_ur10e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/axalta_mir_robot_ur10e/: CMakeLists.txt  package.xml
src/axalta_mir_robot_ur10e_kdl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/axalta_mir_robot_ur10e_trac_ik_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/axalta_mir_robot_ur10e_with_realsense/: CMakeLists.txt  package.xml
src/axalta_mir_robot_ur10e_with_realsense_tracik_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ccs_lite/: CMakeLists.txt  package.xml
src/ccs_lite/launch/: ccs_lite.launch
src/ccs_lite/src/: CcsLiteComNode.py  Main.py  TestFile.py
src/ccs_lite_communicate/: CMakeLists.txt  package.xml
src/ccs_lite_joystick/: CMakeLists.txt  package.xml
src/ccs_lite_joystick/launch/: ccs_lite_joystick.launch
src/ccs_lite_joystick/src/: JoystickNode.py  newjoystick.py
src/ccs_lite_msgs/: CMakeLists.txt  package.xml
src/ccs_lite_msgs/msg/: Camera.msg  CcsLiteCmd.msg  CcsLiteData.msg  Distance.msg  Door.msg  DoorAction.msg  EmergencyData.msg  EnclosureStatus.msg  GpsData.msg  Joystick.msg  LidarEnclosureCmd.msg  MirEnclosureCmd.msg  PmsData.msg  ProximityData.msg  SprayGunCmd.msg  SystemStatusData.msg  TemperatureHumidityData.msg
src/change_screen_rec/: final_sendData_ur.py  trajectory_executor.cpp  trajectory_planning_service.cpp
src/core_launcher/: CMakeLists.txt  package.xml
src/dashboard/: CMakeLists.txt  package.xml
src/data_logging/: CMakeLists.txt  package.xml
src/emergency/: CMakeLists.txt  package.xml
src/exit_job/: CMakeLists.txt  package.xml
src/main_package/: CMakeLists.txt  package.xml
src/mir/: CMakeLists.txt  package.xml
src/open3d_ros_pointcloud_conversion/: CMakeLists.txt
src/path_planner_utility/: CMakeLists.txt  package.xml
src/pointcloud_process/: CMakeLists.txt  package.xml
src/rtde_python/: CMakeLists.txt  package.xml
src/status_check/: CMakeLists.txt  package.xml
src/trajectory_planning/: CMakeLists.txt  package.xml
(+317 files in other folders)
