<?xml version="1.0"?>
<package format="2">
  <name>ccs_lite_msgs</name>
  <version>0.0.0</version>
  <description>The ccs_lite_msgs package</description>
  <maintainer email="padmanaban.rob@gmail.com">Padmanaban</maintainer>
  <license>BSD</license>
  <author email="padmanaban.rob@gmail.com">Padmanaban</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>

</package>
